@@ -6,6 +6,12 @@ Changes in Shorewall 4.4.0
 
 3)  Fix log record formatting.
 
+4)  Restore ipset binding
+
+5)  Fix 'upnpclient' with required interfaces.
+
+5)  Fix provider number in 
+
 Changes in Shorewall 4.4.0-RC2
 
 1)  Fix capabilities file with Shorewall6.
